fixed spacing around buttons and comments section

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -5,6 +5,7 @@ header {
   /* border: 1px solid black; */
   padding: 5px;
   height: 120px;
+  margin: 10px 0;
 }
 
 .header-logo {
