--- a/client/src/container/MainContainer.css
+++ b/client/src/container/MainContainer.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-evenly;
-    width: 100%;
+    /* width: 100%; */
     /* height: calc(100vh - 60px); */
     /* margin-bottom: 30px; */
   }
